--- a/package.json
+++ b/package.json
@@ -17,9 +17,10 @@
 		"clean": "rimraf dist dist-cjs && mkdirp dist dist-cjs",
 		"compile-esm": "tsc",
 		"compile-cjs": "tsc --module commonjs --outDir dist-cjs",
+		"watch-esm": "tsc -w",
 		"generate-keys": "./generate-keys",
-		"test": "exit 0",
-		"jest": "jest --verbose dist-cjs"
+		"start": "serve",
+		"test": "jest --verbose dist-cjs"
 	},
 	"keywords": [],
 	"repository": {
@@ -31,9 +32,9 @@
 	},
 	"homepage": "https://github.com/chase-moskal/renraku#readme",
 	"devDependencies": {
-		"@types/isomorphic-fetch": "0.0.35",
 		"@types/jest": "^24.9.0",
 		"@types/node": "^13.1.7",
+		"importly": "0.1.0-dev.0",
 		"jest": "^24.9.0",
 		"mkdirp": "^0.5.1",
 		"npm-run-all": "^4.1.5",
@@ -42,14 +43,5 @@
 		"serve": "^11.3.0",
 		"typescript": "^3.7.4"
 	},
-	"dependencies": {
-		"@koa/cors": "^3.0.0",
-		"@types/koa": "^2.11.0",
-		"@types/koa-bodyparser": "^4.3.0",
-		"@types/koa__cors": "^3.0.1",
-		"isomorphic-crypto": "^3.0.0",
-		"isomorphic-fetch": "^2.2.1",
-		"koa": "^2.11.0",
-		"koa-bodyparser": "^4.2.1"
-	}
+	"dependencies": {}
 }
