--- a/package.json
+++ b/package.json
@@ -36,12 +36,8 @@
 	},
 	"homepage": "https://github.com/chase-moskal/renraku#readme",
 	"devDependencies": {
-		"@types/jest": "^24.9.0",
 		"@types/node": "^13.1.7",
-		"cynic": "file:../cynic/cynic-0.1.0-dev.1.tgz",
 		"importly": "0.1.0-dev.0",
-		"jest": "^24.9.0",
-		"jest-puppeteer": "^4.4.0",
 		"mkdirp": "^0.5.1",
 		"npm-run-all": "^4.1.5",
 		"puppeteer": "^2.0.0",
@@ -50,5 +46,7 @@
 		"serve": "^11.3.0",
 		"typescript": "^3.7.4"
 	},
-	"dependencies": {}
+	"dependencies": {
+		"cynic": "0.1.0-dev.3"
+	}
 }
