fix: vscode file watcher exclude

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -21,7 +21,7 @@
 	},
 
 	"files.watcherExclude": {
-		"dist/**": true,
+		"dist*/**": true,
 		"source-a*/**": true,
 		"**/.git/objects/**": true,
 		"**/.git/subtree-cache/**": true,
