--- a/package.json
+++ b/package.json
@@ -5,22 +5,16 @@
 	"license": "ISC",
 	"author": "Chase Moskal <chasemoskal@gmail.com",
 	"type": "module",
-	"main": "",
-	"module": "",
 	"files": [
 		"dist",
 		"source",
-		"dist-cjs",
 		"generate-keys"
 	],
 	"scripts": {
-		"prepare": "run-s clean && run-p compile-esm compile-cjs generate-keys && run-s test",
-		"clean": "rimraf dist dist-cjs && mkdirp dist dist-cjs",
-		"compile-esm": "tsc",
-		"compile-cjs": "tsc --module commonjs --outDir dist-cjs",
-		"watch": "run-p watch-esm watch-cjs",
-		"watch-esm": "npm run compile-esm -s -- --watch",
-		"watch-cjs": "npm run compile-cjs -s -- --watch",
+		"prepare": "run-s clean && run-p compile generate-keys && run-s test",
+		"clean": "rimraf dist && mkdirp dist",
+		"compile": "tsc",
+		"watch": "npm run compile -s -- --watch",
 		"generate-keys": "./generate-keys",
 		"start": "serve",
 		"test": "cynic node --label='redcrypto tests (node)' dist/internals/tests/redcrypto.test.js"
