--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
 	"name": "redcrypto",
-	"version": "0.0.0-dev.4",
-	"description": "simple token and signature crypto",
+	"version": "0.0.0-dev.5",
+	"description": "web app cryptography",
 	"license": "ISC",
 	"author": "Chase Moskal <chasemoskal@gmail.com",
 	"type": "module",
@@ -41,19 +41,19 @@
 	},
 	"homepage": "https://github.com/chase-moskal/redcrypto#readme",
 	"devDependencies": {
-		"@types/node": "^13.1.8",
-		"cynic": "0.1.0-dev.4",
+		"@types/node": "^12.12.31",
+		"cynic": "0.1.0-dev.8",
 		"importly": "0.1.0-dev.0",
-		"mkdirp": "^0.5.1",
+		"mkdirp": "^1.0.3",
 		"npm-run-all": "^4.1.5",
-		"puppeteer": "^2.0.0",
+		"puppeteer": "^2.1.1",
 		"replace": "^1.1.5",
-		"rimraf": "^3.0.0",
+		"rimraf": "^3.0.2",
 		"serve": "^11.3.0",
-		"typescript": "^3.7.4"
+		"typescript": "^3.8.3"
 	},
 	"dependencies": {
-		"@types/jsonwebtoken": "^8.3.6",
+		"@types/jsonwebtoken": "^8.3.8",
 		"jsonwebtoken": "^8.5.1"
 	}
 }
