--- a/package.json
+++ b/package.json
@@ -41,19 +41,19 @@
 	},
 	"homepage": "https://github.com/chase-moskal/redcrypto#readme",
 	"devDependencies": {
-		"@types/node": "^14.14.14",
-		"cynic": "0.1.0-dev.14",
+		"@types/node": "^15.12.4",
+		"cynic": "^0.1.0-dev.16",
 		"importly": "0.1.0-dev.0",
 		"mkdirp": "^1.0.4",
 		"npm-run-all": "^4.1.5",
-		"puppeteer": "^5.5.0",
-		"replace": "^1.2.0",
+		"puppeteer": "^10.0.0",
+		"replace": "^1.2.1",
 		"rimraf": "^3.0.2",
-		"serve": "^11.3.2",
-		"typescript": "^4.1.3"
+		"serve": "^12.0.0",
+		"typescript": "^4.3.4"
 	},
 	"dependencies": {
-		"@types/jsonwebtoken": "^8.5.0",
+		"@types/jsonwebtoken": "^8.5.2",
 		"jsonwebtoken": "^8.5.1"
 	}
 }
