--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
 		"watch": "npm run compile -s -- --watch",
 		"generate-keys": "./generate-keys",
 		"start": "serve",
-		"test": "cynic node --label='redcrypto tests (node)' dist/internals/tests/redcrypto.test.js"
+		"test": "cynic node --label='redcrypto tests (node)' dist/internals/tests/redcrypto.test.js",
+		"test-debug": "node inspect node_modules/cynic/dist/cli.js node --label='redcrypto tests (node)' dist/internals/tests/redcrypto.test.js"
 	},
 	"keywords": [
 		"auth",
@@ -41,19 +42,18 @@
 	},
 	"homepage": "https://github.com/chase-moskal/redcrypto#readme",
 	"devDependencies": {
-		"@types/node": "^15.12.4",
+		"@types/node": "^16.4.0",
 		"cynic": "^0.1.0-dev.16",
 		"importly": "0.1.0-dev.0",
 		"mkdirp": "^1.0.4",
 		"npm-run-all": "^4.1.5",
-		"puppeteer": "^10.0.0",
 		"replace": "^1.2.1",
 		"rimraf": "^3.0.2",
 		"serve": "^12.0.0",
-		"typescript": "^4.3.4"
+		"typescript": "^4.3.5"
 	},
 	"dependencies": {
-		"@types/jsonwebtoken": "^8.5.2",
+		"@types/jsonwebtoken": "^8.5.4",
 		"jsonwebtoken": "^8.5.1"
 	}
 }
