--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,8 +1,8 @@
 {
 	"compilerOptions": {
 		"baseUrl": ".",
-		"rootDir": "source",
-		"outDir": "dist",
+		"rootDir": "s",
+		"outDir": "x",
 		"target": "esnext",
 		"lib": ["es6", "dom"],
 		"module": "esnext",
@@ -13,6 +13,6 @@
 		"declaration": true
 	},
 	"include": [
-		"source/**/*"
+		"s/**/*"
 	]
 }
