--- a/package.json
+++ b/package.json
@@ -42,18 +42,18 @@
 	},
 	"homepage": "https://github.com/chase-moskal/redcrypto#readme",
 	"devDependencies": {
-		"@types/jsonwebtoken": "^8.5.4",
-		"@types/node": "^16.4.0",
+		"@types/jsonwebtoken": "^9.0.0",
+		"@types/node": "^18.11.18",
 		"cynic": "^0.1.0-dev.16",
-		"importly": "0.1.0-dev.0",
+		"importly": "^0.2.0",
 		"mkdirp": "^1.0.4",
 		"npm-run-all": "^4.1.5",
-		"replace": "^1.2.1",
+		"replace": "^1.2.2",
 		"rimraf": "^3.0.2",
-		"serve": "^12.0.0",
-		"typescript": "^4.3.5"
+		"serve": "^14.1.2",
+		"typescript": "^4.9.4"
 	},
 	"dependencies": {
-		"jsonwebtoken": "^8.5.1"
+		"jsonwebtoken": "^9.0.0"
 	}
 }
