--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
 	"name": "redcrypto",
-	"version": "0.0.2",
+	"version": "0.0.3",
 	"description": "web app cryptography",
 	"license": "MIT",
 	"author": "Chase Moskal <chasemoskal@gmail.com",
@@ -44,7 +44,7 @@
 	"devDependencies": {
 		"@types/jsonwebtoken": "^9.0.0",
 		"@types/node": "^18.11.18",
-		"cynic": "^0.2.0-dev.1",
+		"cynic": "^0.2.0",
 		"importly": "^0.2.0",
 		"mkdirp": "^1.0.4",
 		"npm-run-all": "^4.1.5",
