add: index.js and client.js re-exports
 - close #4

--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"license": "MIT",
 	"author": "Chase Moskal <chasemoskal@gmail.com",
 	"type": "module",
+	"main": "x/index.js",
 	"files": [
 		"s",
 		"x",
